--- a/.github/workflows/workflow01.yml
+++ b/.github/workflows/workflow01.yml
@@ -8,7 +8,8 @@ jobs:
     - name: Display structure of downloaded files
       run: ls -R
   run-lint:
-    runs-on: 	ubuntu-latest
+    needs: download-artifact
+    runs-on: ubuntu-latest
     steps:
     - name: Install ESLint
       run: npm install -D eslint
