workflow 1 lint update 1

--- a/.github/workflows/workflow01.yml
+++ b/.github/workflows/workflow01.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: 	ubuntu-latest
     steps:
     - uses: actions/download-artifact@v4
+      with:
+        name: my-artifact
     - name: Install ESLint
       run: npm install -D eslint
     - name: Run ESLint
