--- a/.github/workflows/workflow01.yml
+++ b/.github/workflows/workflow01.yml
@@ -9,3 +9,7 @@ jobs:
       run: npm install -D eslint
     - name: Run ESLint
       run: npx eslint --ext .jsx --fix src
+    - name: Install Vite
+      run: npm install -D vite
+    - name: Run tests
+      run: npx vitest run
