--- a/.github/workflows/workflow01.yml
+++ b/.github/workflows/workflow01.yml
@@ -13,3 +13,5 @@ jobs:
       run: npm install -D vite
     - name: Run tests
       run: npx vitest run
+    - name: Build
+      run: npx vite build
