--- a/.github/workflows/workflow01.yml
+++ b/.github/workflows/workflow01.yml
@@ -23,5 +23,7 @@ jobs:
     runs-on: 	ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Install Vite
+      run: npm install -D vite    
     - name: Build
       run: npx vite build
